# foliant

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Lorem_ipsum.v0.1.20.docx  README-DOCKER-HUB.md  README.md  README.rst  Test_Project_0.1.0-20-10-2017.md  changelog.md  client_secret_491001787385-5poccl3gthh27pecjqlrqcek2lbd3htf.apps.googleusercontent.com.json  compile.command  flit.ini  main.yaml  pylintrc  pyproject.toml  run.py  setup.py  test_pylint.py
.github/workflows/: python-publish.yml  (+1 more)
docs/: Command-Reference.md  Dockerfile  Embedding-Diagrams.md  Getting-Started.md  Including-External-Markdown-Files.md  Installation.md  Project-Directory-Structure.md  README.md  Running-Foliant-in-Docker.md  Troubleshooting.md  Uploading-to-Google-Drive.md  docker-compose.yml  foliant.yml  requirements.txt
foliant/: __init__.py  __main__.py  apidoc2markdown.py  builder.py  cli.py  config_parser.py  gdrive.py  gitutils.py  includes.py  pandoc.py  seqdiag.py  swagger2markdown.py  uploader.py  utils.py
scripts/: add_title.applescript  assembler.py  config.json  gdoc_uploader.py  include.py  include_text.py  keys.json  main.py  my_mail.py  pandoc-multibib.hs  ref-simple.docx  ref.docx  ref_backup.docx  testrail.py  testrail_config.json
sources/: conditions.md  functions.md  glossary.md  goal.md  object.md
test-include-project/: incl.md  incl2.md
test-project/: Dockerfile  config.json  docker-compose.yml  foliant.yml  main.yaml  mkdocs.yml  pandoc.yml  pandoc_md_extensions.yml
tests/: test_pre.py  test_pre_backend.py  test_unescape.py  test_utils.py
(+83 files in other folders)
